(1) Bumped minor version (2) Improved NDK demo page (3) Refactored navbar

--- a/public/bitcoin-connect.html
+++ b/public/bitcoin-connect.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="bootstrap-5.3.3/css/bootstrap.min.css" />
-  <title>Bitcoin Connect</title>
+  <title>Bitcoin Connect - Bullish Prototype</title>
 
   <style>
     html {
@@ -12,28 +13,6 @@
       /* Only 6-digit hex and rgb formats are supported! */
     }
   </style>
-
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      fetch('navbar.html')
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById('navbar').innerHTML = data;
-          setActiveLink('Bitcoin Connect');
-        });
-
-      function setActiveLink(activeText) {
-        const navItems = document.querySelectorAll('nav ul li a'); // Select <a> elements
-        navItems.forEach(item => {
-          if (item.textContent.trim() === activeText) {
-            item.classList.add('active'); // Add active class to <a>
-          } else {
-            item.classList.remove('active'); // Remove active class from others
-          }
-        });
-      }
-    });
-  </script>
 
   <script type="module">
     import { launchModal } from 'https://esm.sh/@getalby/bitcoin-connect@3.2.2'; // jsdelivr.net, skypack.dev also work
@@ -48,73 +27,40 @@
 </head>
 
 <body>
-
   <div class="container">
-
     <div id="navbar"></div>
 
     <br>
 
-    <h3>Bitcoin Connect</h3>
-    <p>"Connecting lightning wallets to your webapp has never been easier. Enable WebLN in all browsers with a single
-      button."</p>
-
-    <h6>&lt;bc-button /&gt;</h6>
-    <!-- Bitcoin Connect components are now available -->
-    <bc-button></bc-button>
-
-    <br>
-
-    <div class="jumbotron">
-
-      <button type="button" class="btn btn-outline-light" onclick="pasteButtonClicked()">Paste</button> BOLT11 invoice
-      below <br><br>
-
-      <textarea id="invoice" style="width: 100%" rows="8"></textarea>
-      <br><br>
-
-      <script type="module">
-        import 'https://esm.sh/@getalby/bitcoin-connect@3.2.2';
-      </script>
-
-      <h6>&lt;bc-pay-button /&gt;</h6>
-      <bc-pay-button onclick="payButtonClicked()" onpaid="invoicePaid()"></bc-pay-button>
-
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Bitcoin Connect</h1>
+        <p class="fs-4">A demonstration of Bitcoin Connect functionality.</p>
+      </div>
     </div>
 
-  </div> <!-- /container -->
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h5 class="card-title mb-0">Connect Wallet</h5>
+          </div>
+          <div class="card-body">
+            <button id="connect-wallet" class="btn btn-primary">Connect Wallet</button>
+            <div id="wallet-status" class="mt-3"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <!-- Bootstrap core JavaScript
-================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
+  <!-- Bootstrap core JavaScript -->
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"
     integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
     crossorigin="anonymous"></script>
   <script src="bootstrap-5.3.3/js/bootstrap.min.js"></script>
-
-  <script>
-
-    function payButtonClicked() {
-      var invoice = document.getElementById("invoice").value;
-      const button = document.querySelector("bc-pay-button");
-      button.setAttribute("invoice", invoice);
-    }
-
-    function invoicePaid() {
-      alert("Invoice paid!");
-    }
-
-    function pasteButtonClicked() {
-      navigator.clipboard.readText().then(text => {
-        document.getElementById('invoice').value = text;
-      })
-        .catch(err => {
-          console.error('Failed to read clipboard contents: ', err);
-        });
-    }
-
-  </script>
-
+  <script type="module" src="js/common.js"></script>
+  <script type="module" src="js/bitcoin-connect.js"></script>
 </body>
 
 </html>
