--- a/public/nostr.html
+++ b/public/nostr.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 
 <head>
@@ -5,33 +6,32 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="bootstrap-5.3.3/css/bootstrap.min.css" />
-  <title>Nostr</title>
+  <title>Nostr - Bullish Prototype</title>
   <meta name="description" content="A bullish place to test Nostr tools." />
 
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Bullish Prototype</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="pay.html">Pay</a></li>
-          <li class="nav-item"><a class="nav-link" href="donate.html">Donate</a></li>
-          <li class="nav-item"><a class="nav-link" href="wallet.html">Wallet</a></li>
-          <li class="nav-item"><a class="nav-link active" href="nostr.html">Nostr</a></li>
-        </ul>
+  <div class="container">
+    <div id="navbar"></div>
+
+    <br>
+
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Nostr</h1>
+        <p class="fs-4">A demonstration of Nostr functionality.</p>
       </div>
     </div>
-  </nav>
+  </div>
 
-
+  <!-- Bootstrap core JavaScript -->
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"
+    integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
+    crossorigin="anonymous"></script>
+  <script src="bootstrap-5.3.3/js/bootstrap.min.js"></script>
+  <script type="module" src="js/common.js"></script>
 
 </body>
 
