--- a/public/nwc.html
+++ b/public/nwc.html
@@ -1,151 +1,114 @@
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
 
 <head>
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="bootstrap-5.3.3/css/bootstrap.min.css" />
-    <title>Nostr Wallet Connect</title>
+    <title>Nostr Wallet Connect - Bullish Prototype</title>
     <script type="module" src="https://unpkg.com/bitcoin-qr@1.1.4/dist/bitcoin-qr/bitcoin-qr.esm.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            fetch('navbar.html')
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok ' + response.statusText);
-                    }
-                    return response.text();
-                })
-                .then(data => {
-                    document.getElementById('navbar').innerHTML = data;
-                    setActiveLink('Nostr Wallet Connect');
-                })
-                .catch(error => {
-                    console.error('There was a problem with the fetch operation:', error);
-                });
-
-            function setActiveLink(activeText) {
-                const navItems = document.querySelectorAll('nav ul li a'); // Select <a> elements
-                navItems.forEach(item => {
-                    if (item.textContent.trim() === activeText) {
-                        item.classList.add('active'); // Add active class to <a>
-                    } else {
-                        item.classList.remove('active'); // Remove active class from others
-                    }
-                });
-            }
-        });
-    </script>
 </head>
 
 <body>
-
     <div class="container-fluid">
-
         <div id="navbar"></div>
 
         <br>
 
         <h3 id="header">Donations</h3>
         <div id="transactionsContainer"></div>
-
     </div>
 
+    <!-- Bootstrap core JavaScript -->
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"
+        integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
+        crossorigin="anonymous"></script>
+    <script src="bootstrap-5.3.3/js/bootstrap.min.js"></script>
+    <script type="module" src="js/common.js"></script>
+    <script type="module">
+        import { nwc } from "https://esm.sh/@getalby/sdk@3.7.0";
+
+        const NWC_CONNECTION_SECRET =
+            "nostr+walletconnect://5ab65d2fc016f245eebf5ff760ef7c15acd6d930079052e8813217b18d4c0cda?relay=wss://relay.getalby.com/v1&secret=86db39f1e6d97a5bad4ca827659523e784511eb6816bbf20a1b790b9a855b5f6&lud16=thebullishbitcoiner@getalby.com";
+
+        function timeAgo(timestamp) {
+            const now = Date.now(); // Current time in milliseconds
+            const seconds = Math.floor((now - timestamp * 1000) / 1000); // Convert timestamp to seconds
+            const minutes = Math.floor(seconds / 60);
+            const hours = Math.floor(minutes / 60);
+            const days = Math.floor(hours / 24);
+            const weeks = Math.floor(days / 7);
+            const months = Math.floor(days / 30);
+            const years = Math.floor(days / 365);
+
+            if (seconds < 60) {
+                return seconds === 1 ? "1 second ago" : `${seconds} seconds ago`;
+            } else if (minutes < 60) {
+                return minutes === 1 ? "1 minute ago" : `${minutes} minutes ago`;
+            } else if (hours < 24) {
+                return hours === 1 ? "1 hour ago" : `${hours} hours ago`;
+            } else if (days < 7) {
+                return days === 1 ? "1 day ago" : `${days} days ago`;
+            } else if (weeks < 4) {
+                return weeks === 1 ? "1 week ago" : `${weeks} weeks ago`;
+            } else if (months < 12) {
+                return months === 1 ? "1 month ago" : `${months} months ago`;
+            } else {
+                return years === 1 ? "1 year ago" : `${years} years ago`;
+            }
+        }
+
+        const fetchTransactions = async () => {
+            try {
+                const client = new nwc.NWCClient({
+                    nostrWalletConnectUrl: NWC_CONNECTION_SECRET,
+                });
+                const txResponse = await client.listTransactions({});
+                const formattedTransactions = txResponse.transactions
+                    .filter((tx) => tx.settled_at)
+                    .map((tx) => ({
+                        amount: Math.floor(tx.amount / 1000), // Convert millisats to sats
+                        description: tx.description || "",
+                        timestamp: tx.settled_at,
+                    }));
+
+                // Create a <div> element with Bootstrap list-group class
+                const listGroup = document.createElement('div');
+                listGroup.classList.add('list-group');
+
+                // Iterate over formattedTransactions and create <div> elements
+                formattedTransactions.forEach((transaction) => {
+                    const transactionDiv = document.createElement('div');
+                    transactionDiv.classList.add('list-group-item', 'flex-column', 'align-items-start');
+
+                    // Create the inner structure
+                    transactionDiv.innerHTML = `
+                        <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">${transaction.amount} sats</h5>
+                        <small>${timeAgo(transaction.timestamp)}</small>
+                        </div>
+                        <p class="mb-1">${transaction.description}</p>
+                    `;
+
+                    // Append the transaction div to the list group
+                    listGroup.appendChild(transactionDiv);
+                });
+
+                // Append the list group to a designated container in your HTML
+                const transactionsContainer = document.getElementById('transactionsContainer'); // Make sure this ID matches your HTML
+                transactionsContainer.innerHTML = ''; // Clear previous transactions
+                transactionsContainer.appendChild(listGroup);
+
+            } catch (error) {
+                console.error("Error fetching transactions:", error);
+            }
+        };
+
+        // Call the function when the page is loaded
+        document.addEventListener('DOMContentLoaded', () => {
+            fetchTransactions();
+        });
+    </script>
 </body>
-
-<script type="module">
-
-    import { nwc } from "https://esm.sh/@getalby/sdk@3.7.0";
-
-    const NWC_CONNECTION_SECRET =
-        "nostr+walletconnect://5ab65d2fc016f245eebf5ff760ef7c15acd6d930079052e8813217b18d4c0cda?relay=wss://relay.getalby.com/v1&secret=86db39f1e6d97a5bad4ca827659523e784511eb6816bbf20a1b790b9a855b5f6&lud16=thebullishbitcoiner@getalby.com";
-
-    function timeAgo(timestamp) {
-        const now = Date.now(); // Current time in milliseconds
-        const seconds = Math.floor((now - timestamp * 1000) / 1000); // Convert timestamp to seconds
-        const minutes = Math.floor(seconds / 60);
-        const hours = Math.floor(minutes / 60);
-        const days = Math.floor(hours / 24);
-        const weeks = Math.floor(days / 7);
-        const months = Math.floor(days / 30);
-        const years = Math.floor(days / 365);
-
-        if (seconds < 60) {
-            return seconds === 1 ? "1 second ago" : `${seconds} seconds ago`;
-        } else if (minutes < 60) {
-            return minutes === 1 ? "1 minute ago" : `${minutes} minutes ago`;
-        } else if (hours < 24) {
-            return hours === 1 ? "1 hour ago" : `${hours} hours ago`;
-        } else if (days < 7) {
-            return days === 1 ? "1 day ago" : `${days} days ago`;
-        } else if (weeks < 4) {
-            return weeks === 1 ? "1 week ago" : `${weeks} weeks ago`;
-        } else if (months < 12) {
-            return months === 1 ? "1 month ago" : `${months} months ago`;
-        } else {
-            return years === 1 ? "1 year ago" : `${years} years ago`;
-        }
-    }
-
-    const fetchTransactions = async () => {
-        try {
-            const client = new nwc.NWCClient({
-                nostrWalletConnectUrl: NWC_CONNECTION_SECRET,
-            });
-            const txResponse = await client.listTransactions({});
-            const formattedTransactions = txResponse.transactions
-                .filter((tx) => tx.settled_at)
-                .map((tx) => ({
-                    amount: Math.floor(tx.amount / 1000), // Convert millisats to sats
-                    description: tx.description || "",
-                    timestamp: tx.settled_at,
-                }));
-
-            // Create a <div> element with Bootstrap list-group class
-            const listGroup = document.createElement('div');
-            listGroup.classList.add('list-group');
-
-            // Iterate over formattedTransactions and create <div> elements
-            formattedTransactions.forEach((transaction) => {
-                const transactionDiv = document.createElement('div');
-                transactionDiv.classList.add('list-group-item', 'flex-column', 'align-items-start');
-
-                // Create the inner structure
-                transactionDiv.innerHTML = `
-                    <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">${transaction.amount} sats</h5>
-                    <small>${timeAgo(transaction.timestamp)}</small>
-                    </div>
-                    <p class="mb-1">${transaction.description}</p>
-                `;
-
-                // Append the transaction div to the list group
-                listGroup.appendChild(transactionDiv);
-            });
-
-            // Append the list group to a designated container in your HTML
-            const transactionsContainer = document.getElementById('transactionsContainer'); // Make sure this ID matches your HTML
-            transactionsContainer.innerHTML = ''; // Clear previous transactions
-            transactionsContainer.appendChild(listGroup);
-
-        } catch (error) {
-            console.error("Error fetching transactions:", error);
-        }
-    };
-
-    // Call the function when the page is loaded
-    document.addEventListener('DOMContentLoaded', () => {
-        fetchTransactions();
-    });
-
-</script>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"
-    integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
-    crossorigin="anonymous"></script>
-<script src="bootstrap-5.3.3/js/bootstrap.min.js"></script>
 
 </html>
