--- a/public/nwc.html
+++ b/public/nwc.html
@@ -20,10 +20,7 @@
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"
-        integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
-        crossorigin="anonymous"></script>
-    <script src="bootstrap-5.3.3/js/bootstrap.min.js"></script>
+      <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/common.js"></script>
     <script type="module">
         import { nwc } from "https://esm.sh/@getalby/sdk@3.7.0";
