(1) Restyled website to darker theme (2) Fix to unresponsive hamburger menu

--- a/public/nwc.html
+++ b/public/nwc.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="bootstrap-5.3.3/css/bootstrap.min.css" />
-    <title>Nostr Wallet Connect - bullishPrototype</title>
+      <link rel="stylesheet" href="bootstrap-5.3.3/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/dark-theme.css" />
+  <title>Nostr Wallet Connect - bullishPrototype</title>
     <script type="module" src="https://unpkg.com/bitcoin-qr@1.1.4/dist/bitcoin-qr/bitcoin-qr.esm.js"></script>
 </head>
 
