--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="theme-color" content="#ff9900">
+  <meta name="theme-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="bullishPrototype">
   <link rel="stylesheet" href="bootstrap-5.3.3/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/dark-theme.css" />
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="images/thebullishbitcoiner.png">
   <title>bullishPrototype</title>
