--- a/public/ndk.html
+++ b/public/ndk.html
@@ -3,27 +3,30 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="bootstrap-5.3.3/css/bootstrap.min.css" />
-    <title>NDK Demo - bullishPrototype</title>
+      <link rel="stylesheet" href="bootstrap-5.3.3/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/dark-theme.css" />
+  <title>NDK Demo - bullishPrototype</title>
     <script src="https://cdn.jsdelivr.net/npm/markdown-it@13.0.1/dist/markdown-it.min.js"></script>
     <style>
         .blog-post {
-            border-left: 4px solid #0d6efd;
+            border-left: 4px solid #ff9900;
             margin-bottom: 1.5rem;
             padding: 1.5rem;
-            background-color: rgba(13, 110, 253, 0.05);
+            background-color: rgba(255, 153, 0, 0.1);
             border-radius: 0.375rem;
+            color: #ffffff;
         }
         .blog-post:hover {
-            background-color: rgba(13, 110, 253, 0.1);
+            background-color: rgba(255, 153, 0, 0.15);
         }
         .blog-post .event-id {
-            color: #6c757d;
+            color: #888888;
             font-size: 0.875rem;
         }
         .blog-post .content {
             margin: 1rem 0;
             white-space: pre-wrap;
+            color: #ffffff;
         }
         .blog-post .content p {
             margin-bottom: 1rem;
@@ -35,24 +38,24 @@
             margin: 1rem 0;
         }
         .blog-post .content a {
-            color: #0d6efd;
+            color: #ff9900;
             text-decoration: none;
         }
         .blog-post .content a:hover {
             text-decoration: underline;
         }
         .blog-post .content blockquote {
-            border-left: 4px solid #6c757d;
+            border-left: 4px solid #888888;
             padding-left: 1rem;
             margin: 1rem 0;
-            color: #6c757d;
+            color: #888888;
         }
         .blog-post .author {
-            color: #0d6efd;
+            color: #ff9900;
             font-size: 0.875rem;
             margin-top: 1rem;
             padding-top: 1rem;
-            border-top: 1px solid rgba(108, 117, 125, 0.2);
+            border-top: 1px solid rgba(255, 255, 255, 0.2);
         }
         .profile-card {
             margin-top: 1rem;
