--- a/public/twentyuno.html
+++ b/public/twentyuno.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="bootstrap-5.3.3/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/dark-theme.css" />
   <title>TwentyUno - bullishPrototype</title>
 </head>
 
