(1) Added jumbotron to all pages (2) Adjusted CSS

--- a/public/bitcoin-qr.html
+++ b/public/bitcoin-qr.html
@@ -32,12 +32,15 @@
     <div id="navbar"></div>
 
     <div class="container-fluid">
-
-        <div class="p-2">
-            <h3 id="header">&lt;bitcoin-qr /&gt;</h3>
-            <p>"A zero-dependency, zero-framework QR code web component for Bitcoin on-chain, Lightning, and unified
-                BIP-21 payments."</p>
-            <p>View on <a href="https://github.com/thebrandonlucas/bitcoin-qr">GitHub</a></p>
+        <br>
+        
+        <div class="p-3 mb-4 bg-body-tertiary rounded-3">
+            <div class="container-fluid py-3">
+                <h1 class="display-6 fw-bold">&lt;bitcoin-qr /&gt;</h1>
+                <p class="fs-5">"A zero-dependency, zero-framework QR code web component for Bitcoin on-chain, Lightning, and unified BIP-21 payments."</p>
+                <p>View on <a href="https://github.com/thebrandonlucas/bitcoin-qr">GitHub</a></p>
+            </div>
+        </div>
 
             <div class="flex flex-col items-center">
                 <bitcoin-qr id="qr" width="350" height="350" lightning="lnbc..." is-polling="false" poll-interval="3000"
