--- a/public/twentyuno.html
+++ b/public/twentyuno.html
@@ -14,9 +14,13 @@
   
   <div class="container">
     <br>
-
-    <h4>Twenty Uno Payment Widgets</h4>
-    <p>"Payment Widgets aims to be the easiest way to integrate bitcoin payments into your website."</p>
+    
+    <div class="p-3 mb-4 bg-body-tertiary rounded-3">
+      <div class="container-fluid py-3">
+        <h1 class="display-6 fw-bold">Twenty Uno Payment Widgets</h1>
+        <p class="fs-5">"Payment Widgets aims to be the easiest way to integrate bitcoin payments into your website."</p>
+      </div>
+    </div>
 
     <lightning-widget name="BULLISH" accent="#ff9900" to="bullish@getalby.com"
       image="https://thebullishbitcoiner.files.wordpress.com/2023/08/img_5490.png"
