--- a/public/lnurl-verify.html
+++ b/public/lnurl-verify.html
@@ -6,18 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="bootstrap-5.3.3/css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/dark-theme.css" />
-  <title>LNURL Verify - bullishPrototype</title>
+  <title>LNURL-verify - bullishPrototype</title>
 </head>
 
 <body>
   <div id="navbar"></div>
   
-  <div class="container">
-
-    <div class="row mt-4">
-      <div class="col-12">
-        <h1 class="mb-4">LNURL-verify Demo</h1>
-        <p class="lead">Test LNURL-verify functionality by creating invoices and verifying payments.</p>
+  <div class="container pb-5">
+    <br>
+    
+    <div class="p-3 mb-4 bg-body-tertiary rounded-3">
+      <div class="container-fluid py-3">
+        <h1 class="display-6 fw-bold">LNURL-verify Demo</h1>
+        <p class="fs-5">Test LNURL-verify functionality by creating invoices and verifying payments.</p>
       </div>
     </div>
 
@@ -35,7 +36,15 @@
                 <span class="badge bg-success ms-auto">Verified</span>
               </li>
               <li class="list-group-item d-flex align-items-center">
+                <strong>Stacker News</strong>
+                <span class="badge bg-success ms-auto">Verified</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center">
                 <strong>Breez</strong>
+                <span class="badge bg-success ms-auto">Verified</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center">
+                <strong>ZEUS Pay</strong>
                 <span class="badge bg-success ms-auto">Verified</span>
               </li>
             </ul>
