--- a/public/lnurl-verify.html
+++ b/public/lnurl-verify.html
@@ -36,11 +36,15 @@
                 <span class="badge bg-success ms-auto">Verified</span>
               </li>
               <li class="list-group-item d-flex align-items-center">
-                <strong>Stacker News</strong>
+                <strong>Breez</strong>
                 <span class="badge bg-success ms-auto">Verified</span>
               </li>
               <li class="list-group-item d-flex align-items-center">
-                <strong>Breez</strong>
+                <strong>Coinos</strong>
+                <span class="badge bg-success ms-auto">Verified</span>
+              </li>
+              <li class="list-group-item d-flex align-items-center">
+                <strong>Stacker News</strong>
                 <span class="badge bg-success ms-auto">Verified</span>
               </li>
               <li class="list-group-item d-flex align-items-center">
