--- a/public/bitcoin-connect.html
+++ b/public/bitcoin-connect.html
@@ -51,7 +51,7 @@
   <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="js/common.js"></script>
   <script type="module">
-    import { launchModal } from 'https://esm.sh/@getalby/bitcoin-connect@3.2.2';
+    import { launchModal } from '@getalby/bitcoin-connect';
 
     // Connect wallet button handler
     document.getElementById('connect-wallet').addEventListener('click', async () => {
