--- a/public/bitcoin-qr.html
+++ b/public/bitcoin-qr.html
@@ -67,7 +67,7 @@
     <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/common.js"></script>
     <script type="module">
-        import { LightningAddress } from "https://esm.sh/@getalby/lightning-tools@5.1.2";
+        import { LightningAddress } from "@getalby/lightning-tools";
         import { LIGHTNING_ADDRESSES, DEFAULTS } from "./js/config.js";
 
         let lightningInvoice;
