feat: migrate to React navbar component
- Add React and Vite React plugin
- Convert navbar to reusable React component
- Update all 9 pages to use React navbar
- Implement faster navbar rendering (perceived instant load)
- Bump version to 0.5.5

--- a/public/clink.html
+++ b/public/clink.html
@@ -36,7 +36,7 @@
 <body>
     <div id="navbar"></div>
 
-    <div class="container">
+    <div id="main-content" class="container">
         <br>
 
         <div class="p-3 mb-4 bg-body-tertiary rounded-3">
@@ -98,7 +98,7 @@
 
     <!-- Bootstrap core JavaScript -->
     <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/common.js"></script>
+    <script type="module" src="js/main.jsx"></script>
     <script type="module" src="js/clink.js"></script>
 </body>
 
