--- a/public/nwc.html
+++ b/public/nwc.html
@@ -23,7 +23,7 @@
 
     <!-- Bootstrap core JavaScript -->
       <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/common.js"></script>
+    <script type="module" src="js/main.jsx"></script>
     <script type="module">
         import { NWCClient } from "@getalby/sdk";
 
