--- a/public/bitcoin-connect.html
+++ b/public/bitcoin-connect.html
@@ -19,7 +19,7 @@
 <body>
   <div id="navbar"></div>
   
-  <div class="container">
+  <div id="main-content" class="container">
 
     <br>
 
@@ -49,7 +49,7 @@
 
   <!-- Bootstrap core JavaScript -->
   <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/common.js"></script>
+  <script type="module" src="js/main.jsx"></script>
   <script type="module">
     import { launchModal } from '@getalby/bitcoin-connect';
 
