--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="navbar"></div>
   
-  <div class="container">
+  <div id="main-content" class="container">
     <br>
 
     <div class="p-5 mb-4 bg-body-tertiary rounded-3">
@@ -30,7 +30,7 @@
 
   <!-- Bootstrap core JavaScript -->
   <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/common.js"></script>
+  <script type="module" src="js/main.jsx"></script>
 </body>
 
 </html>
