--- a/public/lnurl-verify.html
+++ b/public/lnurl-verify.html
@@ -12,7 +12,7 @@
 <body>
   <div id="navbar"></div>
   
-  <div class="container pb-5">
+  <div id="main-content" class="container pb-5">
     <br>
     
     <div class="p-3 mb-4 bg-body-tertiary rounded-3">
@@ -184,7 +184,7 @@
 
   <!-- Bootstrap core JavaScript -->
   <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/common.js"></script>
+  <script type="module" src="js/main.jsx"></script>
   <script type="module" src="js/lnurl-verify.js"></script>
 </body>
 
