--- a/public/ndk.html
+++ b/public/ndk.html
@@ -70,7 +70,7 @@
   <body>
     <div id="navbar"></div>
     
-    <div class="container">
+    <div id="main-content" class="container">
         <br>
         
         <div class="p-3 mb-4 bg-body-tertiary rounded-3">
@@ -137,7 +137,7 @@
 
     <!-- Bootstrap core JavaScript -->
       <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/common.js"></script>
+    <script type="module" src="js/main.jsx"></script>
     <script type="module" src="js/ndk-demo.js"></script>
 </body>
 </html> 
