--- a/public/nostr.html
+++ b/public/nostr.html
@@ -15,7 +15,7 @@
 <body>
   <div id="navbar"></div>
 
-  <div class="container">
+  <div id="main-content" class="container">
 
     <br>
 
@@ -29,7 +29,7 @@
 
   <!-- Bootstrap core JavaScript -->
   <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/common.js"></script>
+  <script type="module" src="js/main.jsx"></script>
 
 </body>
 
