--- a/public/twentyuno.html
+++ b/public/twentyuno.html
@@ -12,7 +12,7 @@
 <body>
   <div id="navbar"></div>
   
-  <div class="container">
+  <div id="main-content" class="container">
     <br>
     
     <div class="p-3 mb-4 bg-body-tertiary rounded-3">
@@ -32,7 +32,7 @@
 
   <!-- Bootstrap core JavaScript -->
   <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/common.js"></script>
+  <script type="module" src="js/main.jsx"></script>
 </body>
 
 </html>
